--- a/examen5P2_HectorRivera/nbproject/project.properties
+++ b/examen5P2_HectorRivera/nbproject/project.properties
@@ -79,7 +79,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=examen5P2_HectorRivera
-main.class=examen5p2_hectorrivera.Examen5P2_HectorRivera
+main.class=examen5p2_hectorrivera.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
